# tungsten

./: Cargo.toml  README.md
assets/settings/: default.json
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/cue_ui/: Cargo.toml
crates/cue_ui/src/: cue_ui.rs
crates/dmx_output/: Cargo.toml
crates/dmx_output/src/: dmx_output_settings.rs  items.rs  lib.rs
crates/patch_ui/: Cargo.toml
crates/patch_ui/src/: patch_ui.rs
crates/settings/: Cargo.toml
crates/settings/src/: settings.rs  settings_store.rs
crates/theme/: Cargo.toml
crates/theme/src/: settings.rs  styles.rs  theme.rs
crates/theme/src/styles/: colors.rs  status.rs
crates/tungsten/: Cargo.toml
crates/tungsten/src/: main.rs  tungsten.rs
crates/tungsten/src/tungsten/: app_menus.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  prelude.rs  styled_ext.rs  styles.rs  ui.rs
crates/ui/src/components/: button.rs  icon.rs  indicator.rs  tab.rs  tab_bar.rs  title_bar.rs
crates/ui/src/components/button/: button_icon.rs  button_like.rs
crates/ui/src/components/label/: label.rs  label_like.rs
crates/ui/src/styles/: color.rs  platform.rs  spacing.rs  typography.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: item.rs  pane.rs  pane_group.rs  status_bar.rs  workspace.rs
