[package]
name = "dmx_output"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui.workspace = true
workspace.workspace = true
anyhow.workspace = true
ui.workspace = true

# Settings
settings.workspace = true
serde.workspace = true
schemars.workspace = true
