[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/settings.rs"
doctest = false

[dependencies]
gpui.workspace = true
rust-embed.workspace = true
anyhow.workspace = true

schemars.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
