[package]
name = "theme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/theme.rs"
doctest = false

[dependencies]
gpui.workspace = true

# Settings
settings.workspace = true
serde.workspace = true
schemars.workspace = true
