[package]
name = "tungsten"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "tungsten"
path = "src/main.rs"

[dependencies]
log.workspace = true
gpui.workspace = true
settings.workspace = true
theme.workspace = true
workspace.workspace = true
uuid.workspace = true
assets.workspace = true

#App components
dmx_output.workspace = true
patch_ui.workspace = true
cue_ui.workspace = true

env_logger = "0.9"
