[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
gpui.workspace = true
theme.workspace = true
smallvec.workspace = true

strum = { version = "0.25.0" }
